--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,10 @@
     "type": "silverstripe-vendormodule",
     "license": "BSD-3-Clause",
     "require": {
-        "dnadesign/silverstripe-elemental": "^2@dev",
-        "sheadawson/silverstripe-linkable": "^2.0@dev",
-        "silverstripe/recipe-cms": "^1.0 || ^4.0",
-        "silverstripe/vendor-plugin": "^1.0@dev"
+        "dnadesign/silverstripe-elemental": "^2@dev || ^3@dev",
+        "sheadawson/silverstripe-linkable": "^2@dev",
+        "silverstripe/recipe-cms": "^1@dev || ^4@dev",
+        "silverstripe/vendor-plugin": "^1@dev"
     },
     "require-dev": {
         "phpunit/PHPUnit": "^5.7",
