--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,11 @@
     "type": "silverstripe-vendormodule",
     "license": "BSD-3-Clause",
     "require": {
-        "dnadesign/silverstripe-elemental": "^4@dev",
-        "sheadawson/silverstripe-linkable": "^2@dev"
+        "dnadesign/silverstripe-elemental": "^4.0",
+        "sheadawson/silverstripe-linkable": "^2.0"
     },
     "require-dev": {
-        "phpunit/PHPUnit": "^5.7",
+        "phpunit/phpunit": "^5.7",
         "squizlabs/php_codesniffer": "*"
     },
     "config": {
