--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,16 @@
     "license": "BSD-3-Clause",
     "require": {
         "dnadesign/silverstripe-elemental": "^4.0",
-        "sheadawson/silverstripe-linkable": "^2.0"
+        "dynamic/silverstripe-linkable": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7",
-        "squizlabs/php_codesniffer": "*"
+        "squizlabs/php_codesniffer": "^3.0",
+        "phpmd/phpmd": "^2.6",
+        "sebastian/phpcpd": "^3.0",
+        "phploc/phploc": "^4.0",
+        "pdepend/pdepend": "^2.5",
+        "theseer/phpdox": "^0.11.0"
     },
     "config": {
         "process-timeout": 600
