--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     "license": "BSD-3-Clause",
     "require": {
         "dnadesign/silverstripe-elemental": "^4.8",
-        "gorriecoe/silverstripe-link": "^1.3"
+        "gorriecoe/silverstripe-link": "^1.3",
+        "gorriecoe/silverstripe-embed": "^1"
     },
     "require-dev": {
         "silverstripe/recipe-testing": "^2",
